SFDCProject/src/objects/ZipUtility__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Branch__c</fullName>
        <label>Install Branch</label>
        <picklist>
            <picklistValues>
                <fullName>-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bakersfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA Stockton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT - Hartford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Bay Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fresno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaiian Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inland Empire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Las Vegas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Los Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD - Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North San Diego</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV Reno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYC North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYC South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phoenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescott</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sacramento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Diego</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Luis Obispo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC - Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Bay Area</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>BrightAdvantage - 12 year loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BrightAdvantage - 20 year loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BrightBuy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BrightSave Monthly Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BrightSave Monthly PPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BrightSave Prepaid Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BrightSave Prepaid PPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sales_Availability__c</fullName>
        <label>Sales Availability</label>
        <picklist>
            <picklistValues>
                <fullName>Direct Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Partner Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Branch__c</fullName>
        <label>Sales Branch</label>
        <picklist>
            <picklistValues>
                <fullName>Bakersfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Bay Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fresno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inland Empire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Las Vegas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Los Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD - Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North San Diego</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phoenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescott</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sacramento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Diego</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Luis Obispo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC Charleston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC Greenville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Bay Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Carolina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Los Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ventura</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adirondack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coastal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frontier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Genessee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I don&apos;t know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lanai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maui</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Molokai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Utility_Company__c</fullName>
        <label>Utility Company</label>
        <picklist>
            <picklistValues>
                <fullName>ACE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alameda Municipal Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona Public Service Co</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ - Arizona Public Service (APS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ - Salt River Project Power (SRP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ - Tucson Electric Power (TEP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltimore Gas &amp; Electric Co</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banning Electric Utility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG&amp;E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burbank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Anaheim Public Utilities (APU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Banning Power (BPC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Los Angeles Dept of Water &amp; Power (LADWP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Pacific Gas &amp; Electric (PG&amp;E)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Pasadena Water and Power (PWP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Sacramento Municipal Utility District (SMUD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - San Diego Gas &amp; Electric (SDG&amp;E)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Southern California Edison (SCE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Hudson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Hudson Gas &amp; Elec Corp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City of Palo Alto Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City of Pasadena</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City of Riverside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL&amp;P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colton Electric Utility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ConEdison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut Light &amp; Power Co</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidated Edison Co-NY Inc</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>ZipUtility</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Utility_Company__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sales_Branch__c</columns>
        <columns>Territory__c</columns>
        <columns>Install_Branch__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NY_LIPA</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Territory__c</columns>
        <columns>Utility_Company__c</columns>
        <columns>Zip_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Utility_Company__c</field>
            <operation>equals</operation>
            <value>LIPA</value>
        </filters>
        <label>NY LIPA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PGE</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Territory__c</columns>
        <columns>Utility_Company__c</columns>
        <columns>Zip_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Utility_Company__c</field>
            <operation>equals</operation>
            <value>PG&amp;E</value>
        </filters>
        <label>PGE</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Populated_Data</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Territory__c</columns>
        <columns>Utility_Company__c</columns>
        <columns>Zip_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Territory__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Utility_Company__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Populated Data</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Z-{0000}</displayFormat>
        <label>ZipUtility Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZipUtility</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>